--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackgroundLogin">#e3e3e3</color>
+    <color name="colorBackgroundLoginFacebook">#26599B</color>
+    <color name="colorButtonLoginFacebook">#023876</color>
 
 </resources>
